# monitor-comunitario

./: .dockerignore  .editorconfig  .env.docker.example  .env.example  .env.production.example  .env.supabase.example  .gitattributes  .gitignore  Dockerfile  LICENSE  Makefile  README.md  alembic.ini  docker-compose.production.yml  docker-compose.supabase.yml  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
docs/: ADR-001-stack.md  ARCHITECTURE.md  COMMIT_PLAN.md  CONSENT_AND_ADS.md  DATABASE.md  DEPLOYMENT.md  DEVELOPMENT.md  DEVELOPMENT_LOG.md  FRONTEND.md  GITHUB_RESET.md  LGPD.md  MEMBER_ACCESS.md  OPERATIONS.md  PRD.md  SUPABASE.md
docs/database/: ARCHITECTURE.md  BACKUP_RESTORE.md  EXPORT_IMPORT.md  MIGRATIONS.md  PRD.md  SEED_DEMO.md  SUPABASE.md
migrations/: README.md  env.py
migrations/versions/: 0001_initial_schema.py  20260616_0001_initial_schema.py  20260618_0002_member_access_code.py
scripts/: bootstrap_github.ps1  install.ps1  reset_and_recreate_github.ps1
src/monitor_comunitario/: __init__.py  cli.py
src/monitor_comunitario/api/: main.py  routes_admin.py  routes_member.py  routes_notifications.py  routes_outage_notices.py  (+3 more)
tests/unit/: test_admin_dashboard.py  test_admin_security.py  test_cli.py  test_db_migrations.py  test_matching_service.py  test_member_access.py  test_monitoring_run_model.py  test_municipality_selector.py  test_normalizer.py  test_notification_service.py  test_observability.py  test_outage_notice_service.py  test_parser_celesc_municipality.py  test_scraper_parser.py  test_users_api.py  test_web_home.py
(+34 files in other folders)
