[project]
name = "monitor-comunitario"
version = "0.1.0"
description = "Monitor público de desligamentos programados da Celesc com alertas por endereço."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [
  { name = "Carlos Selva", email = "carlostselva@gmail.com" }
]
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.30",
  "playwright>=1.45",
  "typer>=0.12",
  "rich>=13.7",
  "pydantic-settings>=2.4",
  "sqlalchemy>=2.0",
  "alembic>=1.13",
  "psycopg[binary]>=3.2",
  "httpx>=0.27",
  "apscheduler>=3.10",
  "rapidfuzz>=3.9",
  "python-dotenv>=1.0",
  "structlog>=24.0"
]

[project.scripts]
monitor-comunitario = "monitor_comunitario.cli:app"

[dependency-groups]
dev = [
  "pytest>=8.0",
  "pytest-asyncio>=0.23",
  "pytest-cov>=5.0",
  "ruff>=0.5",
  "mypy>=1.10",
  "pre-commit>=3.7"
]

[tool.uv]
package = true

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]
ignore = []

[tool.mypy]
python_version = "3.12"
warn_unused_ignores = true
warn_return_any = true
packages = ["monitor_comunitario"]

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
addopts = "-q"
